Chore: 라이브러리 변경, Fix: 6.2.4
chore
- 과거 소스로 인한 호환성 문제 등으로 버전 교체
- maven repo에서 조회 안되는 라이브러리 복사
  - {vol}/legacy
---
fix
- mockito 클래스 관련 코틀린 사용 소스 수정
- 샘플소스 내 any() 내용 코틀린 소스로 변경